<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->
<resources>
    <string name="app_name">Motion</string>

    <string name="cheese">Cheese</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="hello_world">Hello, world!</string>
    <string name="favorite">Favorite</string>
    <string name="bookmark">Bookmark</string>
    <string name="share">Share</string>

    <!-- Dissolve -->
    <string name="dissolve_label">Layout > Dissolve</string>
    <string name="next">Next</string>

    <!-- Fade through -->
    <string name="fade_through_label">Layout > Fade through</string>
    <string name="toggle">Toggle</string>
    <string name="detail">Detail</string>
    <string name="order">Order</string>

    <!-- Reorder -->
    <string name="reorder_label">List > Reorder</string>
    <string name="drag_hint">%s clicked. Long press to start dragging.</string>

    <!-- Stagger -->
    <string name="stagger_label">List > Stagger</string>
    <string name="refresh">Refresh</string>

    <!-- Shared Element -->
    <string name="shared_element_label">Navigation > Shared element</string>

    <!-- Nav Fade Through -->
    <string name="nav_fade_through_label">Navigation > Fade through</string>
</resources>
