<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        android:elevation="@dimen/bottom_sheet_elevation"
        android:orientation="vertical"
        app:layout_behavior="@string/bottom_sheet_behavior"
        tools:behavior_peekHeight="512dp"
        tools:targetApi="21">

        <LinearLayout
            android:id="@+id/bottom_sheet_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bottom_sheet_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_medium"
                android:text="@string/cheese"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <TextView
                android:id="@+id/bottom_sheet_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginRight="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/hello_world" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_sheet_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:orientation="vertical"
            tools:alpha="1">

            <LinearLayout
                android:id="@+id/button_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/favorite"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/spacing_medium"
                    android:text="@string/favorite"
                    app:drawableTopCompat="@drawable/ic_favorite" />

                <TextView
                    android:id="@+id/bookmark"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/spacing_medium"
                    android:text="@string/bookmark"
                    app:drawableTopCompat="@drawable/ic_bookmark" />

                <TextView
                    android:id="@+id/share"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/spacing_medium"
                    android:text="@string/share"
                    app:drawableTopCompat="@drawable/ic_share" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/lorem_ipsum"
                android:textAppearance="?attr/textAppearanceBody1" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_medium"
        app:elevation="@dimen/bottom_sheet_elevation"
        app:layout_anchor="@id/bottom_sheet"
        app:layout_anchorGravity="end"
        app:srcCompat="@drawable/ic_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
