<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".demo.dissolve.DissolveActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toTopOf="@id/toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_contact"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/contact_icon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_margin="@dimen/spacing_medium"
                    android:contentDescription="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/cheese_2" />

                <TextView
                    android:id="@+id/contact_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_medium"
                    android:text="@string/cheese"
                    android:textAppearance="?textAppearanceHeadline6"
                    app:layout_constraintBottom_toBottomOf="@id/contact_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/contact_icon"
                    app:layout_constraintTop_toTopOf="@id/contact_icon" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_cheese"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/cheese_image"
                    android:layout_width="0dp"
                    android:layout_height="128dp"
                    android:contentDescription="@string/cheese"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cheese_1"
                    app:layout_constraintBottom_toTopOf="@id/cheese_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/cheese_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:layout_marginLeft="@dimen/spacing_medium"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:layout_marginRight="@dimen/spacing_medium"
                    android:text="@string/cheese"
                    android:textAppearance="?textAppearanceHeadline6"
                    app:layout_constraintBottom_toTopOf="@id/cheese_subtitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cheese_image" />

                <TextView
                    android:id="@+id/cheese_subtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:layout_marginLeft="@dimen/spacing_medium"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:layout_marginRight="@dimen/spacing_medium"
                    android:text="@string/hello_world"
                    android:textAppearance="?textAppearanceSubtitle1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cheese_title" />

                <TextView
                    android:id="@+id/cheese_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:layout_marginLeft="@dimen/spacing_medium"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:layout_marginRight="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/lorem_ipsum"
                    app:layout_constraintBottom_toTopOf="@id/cheese_detail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cheese_subtitle" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cheese_detail"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:layout_marginLeft="@dimen/spacing_medium"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:text="@string/detail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cheese_description" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cheese_order"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order"
                    app:layout_constraintStart_toEndOf="@id/cheese_detail"
                    app:layout_constraintTop_toTopOf="@id/cheese_detail" />

                <ImageButton
                    android:id="@+id/cheese_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_medium"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/favorite"
                    android:tint="?attr/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="@id/cheese_detail"
                    app:layout_constraintEnd_toStartOf="@id/cheese_share"
                    app:layout_constraintTop_toTopOf="@id/cheese_detail"
                    app:srcCompat="@drawable/ic_favorite" />

                <ImageButton
                    android:id="@+id/cheese_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_medium"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/share"
                    android:tint="?attr/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="@id/cheese_detail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/cheese_detail"
                    app:srcCompat="@drawable/ic_share" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:text="@string/toggle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
